flux/infrastructure/ext/victoria-metrics/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "victoriametrics.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-victoria-metrics-single-server
          port: 8428
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
spec:
  chain:
    middlewares:
      - name: bouncer
        namespace: traefik-ext
      - name: authelia-auth
        namespace: traefik-ext
